--- a/Speech-to-Text-and-Translate_API Call.ipynb
+++ b/Speech-to-Text-and-Translate_API Call.ipynb
@@ -42,25 +42,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# url and my api key\n"
+    "# url and my api key saved in config.py file\n",
+    "import config\n",
+    "url_s2t = \"https://stream.watsonplatform.net/speech-to-text/api\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ibm_watson.speech_to_text_v1_adapter.SpeechToTextV1Adapter at 0x206cb708048>"
+       "<ibm_watson.speech_to_text_v1_adapter.SpeechToTextV1Adapter at 0x206cdbd1dc8>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
