--- a/Speech-to-Text-and-Translate_API Call.ipynb
+++ b/Speech-to-Text-and-Translate_API Call.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "[75 rows x 2 columns]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,8 @@
    "source": [
     "# can get a Lists the languages that the service can identify. The method Returns the language code.\n",
     "from pandas.io.json import json_normalize\n",
-    "json_normalize(language_translator.list_identifiable_languages().get_result(), \"languages\")"
+    "language_code = json_normalize(language_translator.list_identifiable_languages().get_result(), \"languages\")\n",
+    "language_code"
    ]
   },
   {
@@ -491,99 +492,6 @@
    "metadata": {},
    "source": [
     "Use the method translate this will translate the text. The parameter text is the text. Model_id is the type of model we would like to use use we use list the the langwich . In this case, we set it to 'en-zh' or English to Chinese. We get a Detailed Response object translation_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ibm_cloud_sdk_core.detailed_response.DetailedResponse at 0x206cdf38d08>"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# translate the text using method \"translate\". \n",
-    "translation_response = language_translator.translate(\\\n",
-    "                    text=recognized_text, model_id='en-zh')\n",
-    "translation_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'translations': [{'translation': '在此视频中我们将覆盖多项式回归和管道 '}],\n",
-       " 'word_count': 10,\n",
-       " 'character_count': 64}"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# result is a dictionary\n",
-    "translation = translation_response.get_result()\n",
-    "translation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'在此视频中我们将覆盖多项式回归和管道 '"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chinese_translation = translation['translations'][0]['translation']\n",
-    "chinese_translation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'translations': [{'translation': 'In this video we will override the polynomial regression and pipeline '}],\n",
-       " 'word_count': 6,\n",
-       " 'character_count': 19}"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "translation_response = language_translator.translate(\\\n",
-    "                    text=chinese_translation, model_id='zh-en')\n",
-    "translation = translation_response.get_result()\n",
-    "translation"
    ]
   },
   {
@@ -616,79 +524,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ibm_cloud_sdk_core.detailed_response.DetailedResponse at 0x206cdae8548>"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "translation_response = language_translator.translate(\\\n",
-    "                    text=recognized_text, model_id='en-fr')\n",
-    "translation_response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Dans cette vidéo, nous couvrons la régression polynomiale et les pipelines '"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "translation = translation_response.get_result()\n",
-    "french_translation = translation['translations'][0]['translation']\n",
-    "french_translation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "def translate(langs):\n",
+    "    \n",
     "    translation_response = language_translator.translate(\n",
     "        text=recognized_text, model_id=langs)\n",
-    "    print('Original English text is: {}'.format(recognized_text))\n",
-    "    translation = translation_response.get_result()\n",
+    "    \n",
+    "    translation = translation_response.get_result()                  # translation is a dictionary\n",
     "    lang_translation = translation['translations'][0]['translation']\n",
-    "    print('Translation is: {}'.format(lang_translation))"
+    "    \n",
+    "    print('Original English text is:\\n{}\\n'.format(recognized_text))\n",
+    "    print('Translation is: \\n{}'.format(lang_translation))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original English text is: in this video we will cover polynomial regression and pipelines \n",
-      "Translation is: 在此视频中我们将覆盖多项式回归和管道 \n"
+      "Original English text is:\n",
+      "in this video we will cover polynomial regression and pipelines \n",
+      "\n",
+      "Translation is: \n",
+      "en este video cubriremos la regresión polinómica y los oleoductos \n"
+     ]
+    }
+   ],
+   "source": [
+    "translate('en-es')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original English text is:\n",
+      "in this video we will cover polynomial regression and pipelines \n",
+      "\n",
+      "Translation is: \n",
+      "在此视频中我们将覆盖多项式回归和管道 \n"
      ]
     }
    ],
    "source": [
     "translate('en-zh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original English text is:\n",
+      "in this video we will cover polynomial regression and pipelines \n",
+      "\n",
+      "Translation is: \n",
+      "このビデオで私たちは多項式の回帰とパイプラインを対象とする \n"
+     ]
+    }
+   ],
+   "source": [
+    "translate('en-ja')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>language</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>ja</td>\n",
+       "      <td>Japanese</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   language      name\n",
+       "31       ja  Japanese"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "japanese = language_code[language_code.name=='Japanese']\n",
+    "japanese"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ja'"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "japan_code = japanese[['language']].values[0][0]\n",
+    "japan_code"
    ]
   },
   {
